# flowerjuce

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt
apps/layercake/core/: LayerCakeLookAndFeel.cpp  LayerCakeLookAndFeel.h
apps/sao_cli/: CMakeLists.txt  Main.cpp
apps/streamgen/: AudioThreadTelemetry.cpp  AudioThreadTelemetry.h  CMakeLists.txt  ControlsComponent.cpp  ControlsComponent.h  DiagnosticLogWriter.cpp  DiagnosticLogWriter.h  GenerationScheduler.cpp  GenerationScheduler.h  GenerationStatusComponent.cpp  GenerationStatusComponent.h  GenerationTimelineStore.cpp  GenerationTimelineStore.h  InferenceSnapshot.h  InferenceWorker.cpp  InferenceWorker.h  Main.cpp  MixerComponent.cpp  MixerComponent.h  MusicalTime.h  OperatorDashboardWindow.cpp  OperatorDashboardWindow.h  OperatorVizComponent.cpp  OperatorVizComponent.h  PreVaeDebugDump.cpp  PreVaeDebugDump.h  SimulationWindow.cpp  SimulationWindow.h  StageTimingComponent.cpp  StageTimingComponent.h  StreamGenComponent.cpp  StreamGenComponent.h  StreamGenDebugLog.h  StreamGenProcessor.cpp  StreamGenProcessor.h  TimeRuler.h  WaveformTimelineComponent.cpp  WaveformTimelineComponent.h
apps/streamgen/tests/: StreamGenProcessorHoldTest.cpp
apps/streamgen_cli/: CMakeLists.txt  Main.cpp
apps/wham/: CMakeLists.txt  Main.cpp
apps/zenon_cli/: CMakeLists.txt  Main.cpp
libs/: CMakeLists.txt
libs/flowerjuce/: CMakeLists.txt
libs/sao_inference/: CMakeLists.txt
libs/sao_inference/include/sao_inference/: ConditioningAssembler.h  DiTInpaintModel.h  DiTModel.h  IVaeDecoder.h  IVaeEncoder.h  InpaintConditioningAssembler.h  InpaintSampler.h  InputAddTensor.h  MlxZenonVae.h  NumberEmbedder.h  OnnxModel.h  OnnxVaeDecoder.h  OnnxVaeEncoder.h  Pipeline.h  RectifiedFlowSampler.h  T5Encoder.h  Tokenizer.h  VAEDecoder.h  VAEEncoder.h  ZenonPipeline.h  ZenonPipelineConfig.h
libs/sao_inference/src/: ConditioningAssembler.cpp  DiTInpaintModel.cpp  DiTModel.cpp  InpaintConditioningAssembler.cpp  InpaintSampler.cpp  MlxZenonVae.cpp  NumberEmbedder.cpp  OnnxModel.cpp  OnnxVaeDecoder.cpp  OnnxVaeEncoder.cpp  Pipeline.cpp  RectifiedFlowSampler.cpp  T5Encoder.cpp  Tokenizer.cpp  VAEDecoder.cpp  VAEEncoder.cpp  ZenonPipeline.cpp  ZenonPipelineConfig.cpp
libs/sao_inference/tests/: test_conditioning_parity.cpp  test_dit_parity.cpp  test_full_pipeline_parity.cpp  test_number_embedder_parity.cpp  test_sampler_parity.cpp  test_t5_parity.cpp  test_vae_parity.cpp  test_zenon_conditioning_parity.cpp  test_zenon_dit_parity.cpp  test_zenon_full_pipeline_parity.cpp  test_zenon_sampler_parity.cpp  test_zenon_vae_encoder_batch_parity.cpp  test_zenon_vae_encoder_mlx_parity.cpp  test_zenon_vae_encoder_parity.cpp
libs/vampnet_inference/: CMakeLists.txt
libs/vampnet_inference/include/vampnet_inference/: VampNetInference.hpp
libs/vampnet_inference/src/: VampNetInference.cpp
